# SingleStopFitting

./: .gitignore  FittingImprovements.ipynb  pyproject.toml  setup.sh
distributed/: background_list.txt  combine_exec  combine_exec_control  combine_exec_single  combine_exec_toys  combine_script  combine_script_control  combine_script_single  combine_script_toys  combine_submit.sub  combine_submit_control.sub  combine_submit_toys.sub  condor_exec  control_submit.sub  smooth_background_exec  smooth_backgrounds.sub  submit.sub
fitting/: __init__.py  background_sim.py  blinder.py  cli.py  config.py  core.py  dataloading.py  diagnostics.py  estimate.py  extra_types.py  gather_results.py  high_level.py  logging.py  models.py  plot_tools.py  plots.py  predictive.py  regression.py  signal_fitting.py  slice_plot.py  stat_checks.py  storage.py  transformations.py  utils.py  windowing.py
fitting/analysis/: numpmodel.py  statmodel.py
fitting/combine/: datacard.py  gather.py  gather_limit.py  gather_significance.py  generate.py  plot_limit.py  plot_rate.py  plot_sensitivity.py  plot_sig.py  plot_significance.py
fitting/distributed/: make_env.py  submit.py
fitting/plotting/: annots.py  patchmpl.py  plot_tools.py  plots.py
fitting/templating/: latex_env.py  make_signal_card.py
notebooks/: fit_experiments.ipynb  fit_updates.ipynb  mcmc_experiments.ipynb  multidim_fit.ipynb
scripts/: add_toy_to_meta  gather  make_background  make_background_control  make_rep_sample  mkcombinelist.py  mkrunlist.py  plot_rates  quick_est  start_combine
templates/: signal_card.tex
(+1 files in other folders)
