[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["UMN Stealth Stop Group"]
license = "MIT"
readme = "README.org"

[tool.poetry.scripts]
analyzer = 'analyzer.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
hist = "^2.6.3"
matplotlib = "^3.7"
coffea = {version="^2024", extras=["dask"]} 
jupyter = "*"
pyyaml = "^6.0"
lpcjobqueue = { git = "https://github.com/CoffeaTeam/lpcjobqueue", branch = "main" , optional=true}
gpytorch  = {version = ">=1.11", optional=true}
pyro-ppl = "*"
numpyro = {version="*", extras=["cpu"]} 
numexpr = ">=2.8.4"
argcomplete='^3.4.0'

[tool.poetry.extras]
torch=["gpytorch", "pyro-ppl"]
lpcqueue=["lpcjobqueue"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
