[tool.poetry]
name = "fitting"
version = "0.1.0"
description = ""
authors = ["UMN Single Stop Group"]
license = "MIT"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.9"
hist = "^2.6.3"
matplotlib = "^3.7"
jupyter = "*"
pyyaml = "^6.0"
gpytorch  = ">=1.11"
pyro-ppl = "*"
numpyro = {version="*", extras=["cpu"]} 
numexpr = ">=2.8.4"
argcomplete='^3.4.0'
#mplhep = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
